[package]
name = "checkssl"
version = "0.2.0"
authors = ["Aldi Perdana <aldidana@gmail.com>"]
edition = "2018"
description = "Check ssl certificate"
repository = "https://github.com/aldidana/checkssl/"
license = "MIT"
keywords = ["ssl", "checkssl", "check-site-ssl"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.23.18"
webpki-roots = "0.26.7"
webpki = "0.22.4"
x509-parser = "0.16.0"
chrono = { version = "0.4.38", features = [ 'serde' ] }
serde = { version = "1.0.215", features = [ 'derive' ] }
